# curn

./: .gitignore  Cargo.toml  Makefile  README.md  autotests.py  bashreadline.bpf.c  main.c  run.sh  snoop.bpf.c  snoop.bpf.h  test.sh  test_utils.sh
minicurn/: .gitignore  Makefile  README.md
src/: capabilities.rs  cgroup.rs  child.rs  cli.rs  config.rs  container.rs  ebpf.rs  error.rs  hosthname.rs  ipc.rs  main.rs  mount.rs  syscall.rs  tools.rs  user_namespace.rs
tests/: .gitignore  test_fd.c  test_mem.c
