[package]
name = "cunrc"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = { version = "0.3.26" }
log = { version = "0.4.22" }
env_logger = { version = "0.11.6" }
nix = { version = "0.29.0", features = [
    "feature",
    "socket",
    "sched",
    "signal",
    "process",
    "hostname",
    "mount",
    "fs",
    "user",
] }
scan_fmt = { version = "0.2.6" }
rand = { version = "0.8.5" }
capctl = { version = "0.2.4" }
