[package]
name = "cunrc"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.29.0", features = [
    "feature",
    "socket",
    "sched",
    "signal",
    "process",
    "hostname",
    "mount",
    "fs",
    "user",
] }
structopt = "0.3.26"
log = "0.4.22"
env_logger = "0.11.6"
scan_fmt = "0.2.6"
rand = "0.8.5"
capctl = "0.2.4"
syscallz = "0.17.0"
libc = "0.2.169"
cgroups-rs = "0.3.4"
rlimit = "0.10.2"
